--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>org.example</groupId>
     <artifactId>Anti-Procastinator</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>1.14</maven.compiler.source>
+        <maven.compiler.target>1.14</maven.compiler.target>
+    </properties>
 
 
 </project>
